# ATPET-DIPC

./: .gitignore  LQR_demo_data.txt  LQR_demo_data_down.txt  LQR_demo_data_up.txt  MPC_balance_full.py  MPC_testing.py  MPC_testing_stepper.py  README.md  casadi_testing.py  debugging_pico_code.py  double_LQR.py  double_pend_mpc_data.txt  double_pend_mpc_data_2.txt  double_pend_mpc_data_3.txt  double_pend_test.py  double_pendulum_model.py  example_mpc.py  fake_pendulum.py  ff_swing_up_funny.py  final_data_for_plotting_mpc.txt  finding_nemo.py  fit_path_fourier.py  gen.c  gen.h  get_xy.py  interp.py  intfunc.c  linearizer_casadi.py  mpc_data.txt  mpc_data_2.txt  mpc_faker_data.py  mpc_get_feedforward.py  mpc_with_lookahead.py  nice_graphs.py  nlp.c  optimization_result.txt  output_data.txt  pendulum.py  pendulum_test.py  pico-testing.py  (+7 more)
SI/: 0.5s0.2pwr  SI-data.xlsx  data  data-collection.py  data.txt  data1.txt  data2.txt  data3.txt  data4.txt  data_collection.py  debug.py  double_data.py  double_pend_SI.py  nlp.c  plot_SI.py  pulley.csv  pulley.py  pulley2.csv  single_pend_SI.py  single_pend_SI_stepper.py  single_pend_SI_stepper_lmfit.py  static0.txt  static1.txt  static2.txt
demo/: down.py  lqr.py  up.py
demo_old/: lqr.py
forcespro/: forces_testing.py  forces_testing_2.py
old_and_failed/: lagrange.py  mechanics.py  test_joints.py
pico-arduino/: platformio.ini
pico-code/: Cargo.toml  broken.rs  data_stuffs.txt  main_working_single.rs  nlp.c  old_main.rs  steps.pio
pico-code/src/: main.rs  steps.pio
pico-micropython-bad/: motor_data_collection  pico_test.py  (+2 more)
(+48 files in other folders)
