[package]
name = "pico-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
fugit = "0.3.6"
heapless = "0.7.16"
i2c-pio = "0.6.0"
panic-halt = "0.2.0"
rp-pico = "0.8.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
pio-proc = "0.2.1"
pio = "0.2.0"
micromath = "2.0.0"
rp2040-hal = "0.9.1"
critical-section = "1.1.2"
